# super-giggle

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  METHODOLOGY.md  README.md  cv.ipynb  index.html  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
.ipynb_checkpoints/: cv-checkpoint.ipynb
output/: index.html
output/visualizations/: heatmap.html  network.html  radar.html  timeline.html  wordcloud.html
src/: __init__.py  generate.py
src/data/: __init__.py  connections.py  experience.py  skills.py
src/visualizations/: __init__.py  heatmap.py  network.py  radar.py  timeline.py  wordcloud.py
tests/: __init__.py  test_data_quality.py
