[project]
name = "cv-visualizations"
version = "2.0.0"
description = "Data-driven portfolio visualizations showcasing professional experience and skills"
authors = [
    {name = "Craig Turner", email = "craig.turner@schibsted.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "plotly>=5.18.0",
    "pandas>=2.1.0",
    "networkx>=3.2",
    "kaleido>=0.2.1",
]

[project.optional-dependencies]
notebook = [
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "wordcloud>=1.9.0",
]
dev = [
    "pytest>=7.4.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-python-dateutil>=2.8.0",
]

[project.urls]
Homepage = "https://github.com/thundergore/super-giggle"
Repository = "https://github.com/thundergore/super-giggle"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
